--- a/Group10/contact.html
+++ b/Group10/contact.html
@@ -265,7 +265,7 @@ Author URL: http://w3layouts.com
       <div class="row">
         <div class="col-lg-8 text-lg-left text-center mb-lg-0 mb-3">
           <p class="copyright">© 2020 Captivate. All Rights Reserved. Design by <a
-            href="https://w3layouts.com/">W3Layouts</a></p>
+            href="https://w3layouts.com/">W3Layouts123</a></p>
         </div>
         <div class="col-lg-4 align-center text-lg-right text-center">
           <a href="#facebook" class="social-item"><span class="fa fa-facebook-f"></span></a>
