--- a/Group10/index.html
+++ b/Group10/index.html
@@ -15,6 +15,7 @@ Author URL: http://w3layouts.com
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
+  <link rel="manifest" href="./manifest.webmanifest">
 
 </head>
 
