--- a/Group10/index.html
+++ b/Group10/index.html
@@ -62,7 +62,7 @@ Author URL: http://w3layouts.com
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-7 col-md-12 col-sm-12 order-lg-first mt-lg-0 mt-4">
-                <h1 class="mb-4 title"><strong>The personal blog. </strong>The two future web developers of Politeknik Brunei. 
+                <h1 class="mb-4 title"><strong>Our personal blog. </strong>The two future web developers of Politeknik Brunei. 
                 </h1>
                 <p>Group 10 of WADT module</p>
                 <div class="mt-5">
