--- a/Group10/index.html
+++ b/Group10/index.html
@@ -90,7 +90,7 @@ Author URL: http://w3layouts.com
                 <p class="mt-md-4 mt-3 mb-0"> This website is made as a personal blog to complete our project. The aim of it is to improve its performance for future use. The improvement of this website will give us an insight on what to do to increase the perfomance of other websites.</p>
             </div>
             <div class="col-lg-6">
-                <img src="assets/images/about.png" class="img-fluid img-shadow" alt="about">
+                <img src="assets/images/about.webp" class="img-fluid img-shadow" alt="about">
             </div>
         </div>
     </div>
