--- a/Group10/contact.html
+++ b/Group10/contact.html
@@ -315,7 +315,7 @@ Author URL: http://w3layouts.com
 <!-- //particles -->
 
 <!-- owl carousel -->
-<script src="assets/js/owl.carousel.js"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
 <script>
   $(document).ready(function () {
     var owl = $('.owl-carousel');
