--- a/Group10/contact.html
+++ b/Group10/contact.html
@@ -14,7 +14,7 @@ Author URL: http://w3layouts.com
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400&display=swap" rel="stylesheet">
 
   <!-- Template CSS -->
-  <link rel="stylesheet" href="assets/css/style-starter.css">
+  <link rel="stylesheet" href="assets/css/style-starter.min.css">
 
 </head>
 
