--- a/Group10/about.html
+++ b/Group10/about.html
@@ -78,7 +78,7 @@ Author URL: http://w3layouts.com
                 
             </div>
             <div class="col-lg-6">
-                <img src="assets/images/about1.png" class="img-fluid img-shadow" alt="about">
+                <img src="assets/images/about1.webp" class="img-fluid img-shadow" alt="about">
             </div>
         </div>
     </div>
@@ -106,7 +106,6 @@ Author URL: http://w3layouts.com
                     <div class="row mobile-right-grids mb-lg-5 mb-4">
                         <div class="col-2 mobile-right-icon">
                             <div class="mobile-icon">
-                                <!-- <span class="fa fa-gamepad"></span> -->
                             </div>
                         </div>
                     </div>
@@ -123,7 +122,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="col-lg-4 mobile-left">
-                    <img src="assets/images/mobile.png" class="img-fluid" alt="">
+                    <img src="assets/images/mobile.webp" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-4 mobile-right">
                     <div class="row mobile-right-grids mb-lg-5 mb-4">
