--- a/Group10/index.html
+++ b/Group10/index.html
@@ -331,7 +331,7 @@ the help of MySQL server.</p>
 
 <script>
   // When the user scrolls down 20px from the top of the document, show the button
-  window.onscroll = function () {
+  window.onscroll = function () {}
   // When the user clicks on the button, scroll to the top of the document
 </script>
 <!-- //move top -->
