--- a/Group10/index.html
+++ b/Group10/index.html
@@ -72,7 +72,7 @@ Author URL: http://w3layouts.com
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12 order-first text-lg-left text-center">
                 <div>
-                    <img src="assets/images/banner-round.png" alt="" class="rounded-circle img-fluid">
+                    <img src="assets/images/banner-round.webp" alt="" class="rounded-circle img-fluid">
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@ Author URL: http://w3layouts.com
                 <p class="mt-md-4 mt-3 mb-0"> This website is made as a personal blog to complete our project. The aim of it is to improve its performance for future use. The improvement of this website will give us an insight on what to do to increase the perfomance of other websites.</p>
             </div>
             <div class="col-lg-6">
-                <img src="assets/images/about.png" class="img-fluid img-shadow" alt="about">
+                <img src="assets/images/about.webp" class="img-fluid img-shadow" alt="about">
             </div>
         </div>
     </div>
@@ -125,26 +125,6 @@ Author URL: http://w3layouts.com
           <p>Introduces integrated overview of the mobile Ionic platform and the methodologies used in developing mobile application.</p>
         </div>
       </div>
-      <!-- <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="box-wrap">
-          <div class="icon">
-            <span class="fa fa-dollar"></span>
-          </div>
-          <h4><a href="#url">Financial Consulting</a></h4>
-          <p>Lorem ipsum dolor sit amet sed consectetur adipisicing elit.
-            doloret quas saepe autem, dolor set.</p>
-        </div>
-      </div> -->
-      <!-- <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="box-wrap">
-          <div class="icon">
-            <span class="fa fa-industry"></span>
-          </div>
-          <h4><a href="#url">Investment Planning</a></h4>
-          <p>Lorem ipsum dolor sit amet sed consectetur adipisicing elit.
-            doloret quas saepe autem, dolor set.</p>
-        </div>
-      </div> -->
       <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="box-wrap">
           <div class="icon">
@@ -186,7 +166,7 @@ the help of MySQL server.</p>
                             <div class="customers-left_sur">
                                 <div class="customers_grid">
                                     <div class="custo-img-res">
-                                        <a href="contact.html"><img src="assets/images/testi1.jpg" alt=" " class="">
+                                        <a href="contact.html"><img src="assets/images/testi1.webp" alt=" " class="">
                                     </div>
                                     <div class="ratings my-4 my-4">
                                         <span class="fa fa-star"></span>
@@ -199,7 +179,6 @@ the help of MySQL server.</p>
                                     <div class="customers-bottom_sur">
                                         <div class="custo_grid">
                                             <h5>Najib Kadir</h5>
-                                            <!-- <span>Designation</span> -->
                                         </div>
                                     </div>
                                 </div>
@@ -213,7 +192,7 @@ the help of MySQL server.</p>
                             <div class="customers-left_sur">
                                 <div class="customers_grid">
                                     <div class="custo-img-res">
-                                        <a href="services.html"><img src="assets/images/testi2.jpg" alt=" " class="img-fluid">
+                                        <a href="services.html"><img src="assets/images/testi2.webp" alt=" " class="img-fluid">
                                     </div>
                                     <div class="ratings my-4">
                                         <span class="fa fa-star"></span>
@@ -226,7 +205,6 @@ the help of MySQL server.</p>
                                     <div class="customers-bottom_sur">
                                         <div class="custo_grid">
                                             <h5>Arif Roslan</h5>
-                                            <!-- <span>Designation</span> -->
                                         </div>
                                     </div>
                                 </div>
@@ -288,59 +266,6 @@ the help of MySQL server.</p>
     </div>
 </section>
 <!-- //stats section -->
-
-<!-- homepage blog grids -->
-<section id="blog">
-    <!-- <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-8 offset-lg-2 col-md-12 col-sm-12">
-                <h4 class="section-title">Company News</h4>
-                <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have
-                    suffered alteration in some form, by injected humour</p>
-            </div>
-        </div>
-        <div class="blog-grids row mt-5">
-            <div class="col-lg-4 col-md-6 col-sm-12 blog-grid" id="zoomIn">
-                <a href="#blog-single.html">
-                    <figure><img src="assets/images/blog.jpg" class="img-fluid" alt=""></figure>
-                </a>
-                <div class="blog-info">
-                    <h3><a href="#blog-single.html">4 Steps To Consider Before You Start</a> </h3>
-                    <ul>
-                        <li><a href="#author"><span class="fa fa-user-o mr-2"></span>Johnson smith</a></li>
-                        <li><span class="fa fa-calendar mr-2"></span>Jan 16, 2020</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-md-0 mt-4 blog-grid" id="zoomIn">
-                <a href="#blog-single.html">
-                    <figure><img src="assets/images/blog1.jpg" class="img-fluid" alt=""></figure>
-                </a>
-                <div class="blog-info">
-                    <h3><a href="#blog-single.html">Strategic Plan Execution Management</a> </h3>
-                    <ul>
-                        <li><a href="#author"><span class="fa fa-user-o mr-2"></span>Alexander</a></li>
-                        <li><span class="fa fa-calendar mr-2"></span>Jan 19, 2020</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-lg-0 mt-4 blog-grid" id="zoomIn">
-                <a href="#blog-single.html">
-                    <figure><img src="assets/images/blog2.jpg" class="img-fluid" alt=""></figure>
-                </a>
-                <div class="blog-info">
-                    <h3><a href="#blog-single.html">Business planning, strategy and execution</a> </h3>
-                    <ul>
-                        <li><a href="#author"><span class="fa fa-user-o mr-2"></span>Elizabeth ker</a></li>
-                        <li><span class="fa fa-calendar mr-2"></span>Jan 21, 2020</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div> -->
-</section>
-<!-- //homepage blog grids -->
 
 <!-- site footer -->
 <footer id="site-footer">
@@ -432,7 +357,6 @@ the help of MySQL server.</p>
 <script src="assets/js/lightbox-plus-jquery.min.js"></script>
 
 <!-- particles -->
-<script src='assets/js/particles.min.js'></script>
 <script src="assets/js/script.js"></script>
 <!-- //particles -->
 
