--- a/Group10/index.html
+++ b/Group10/index.html
@@ -361,7 +361,7 @@ the help of MySQL server.</p>
 <!-- //particles -->
 
 <!-- owl carousel -->
-<script src="assets/js/owl.carousel.js"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
 <script>
   $(document).ready(function () {
     var owl = $('.owl-carousel');
