--- a/Group10/index.html
+++ b/Group10/index.html
@@ -196,7 +196,7 @@ Author URL: http://w3layouts.com
                             <span class="fa fa-handshake-o"></span>
                         </div>
                         <p class="value">28</p>
-                        <p class="title white">Collaboration/p>
+                        <p class="title white">Collaboration</p>
                     </div>
                     <div class="counter">
                         <div class="icon">
