--- a/Group10/index.html
+++ b/Group10/index.html
@@ -114,7 +114,7 @@ Author URL: http://w3layouts.com
                             <div class="customers-left_sur">
                                 <div class="customers_grid">
                                     <div class="custo-img-res">
-                                        <a href="contact.html"><img src="assets/images/testi1.webp" alt=" " class="">
+                                        <a href="contact.html"><img src="assets/images/testi1.webp" alt="img1" class="">
                                     </div>
                                     <div class="ratings my-4 my-4">
                                         <span class="fa fa-star"></span>
@@ -140,7 +140,7 @@ Author URL: http://w3layouts.com
                             <div class="customers-left_sur">
                                 <div class="customers_grid">
                                     <div class="custo-img-res">
-                                        <a href="services.html"><img src="assets/images/testi2.webp" alt=" " class="img-fluid">
+                                        <a href="services.html"><img src="assets/images/testi2.webp" alt="img2" class="img-fluid">
                                     </div>
                                     <div class="ratings my-4">
                                         <span class="fa fa-star"></span>
