--- a/Group10/contact.html
+++ b/Group10/contact.html
@@ -54,19 +54,7 @@ Author URL: http://w3layouts.com
   </nav>
 </header>
 <!-- //site header -->
-
-<!-- service page breadcrumns -->
-<section class="inner-banner">
-
-</section>
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb breadcrumb-padding">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Najib</li>
-    </ol>
-</nav>
-<!-- service page breadcrumns -->
-
+<section class="inner-banner"></section>
 <!-- services page block 1 -->
 <section class="w3l-features">
     <div class="call-w3">
