--- a/Group10/contact.html
+++ b/Group10/contact.html
@@ -13,7 +13,7 @@ Author URL: http://w3layouts.com
   <title>Najib's blog</title>
 
   <!-- Template CSS -->
-  <link rel="stylesheet" href="assets/css/style-starter.css">
+  <link rel="stylesheet" href="assets/css/style-starter.min.css">
 
 </head>
 
