--- a/Group10/services.html
+++ b/Group10/services.html
@@ -136,7 +136,7 @@ Author URL: http://w3layouts.com
             </div>
             <div class="row mobile-info-inn mx-lg-0 mt-md-5 mt-4">
                 <div class="col-lg-6 image-left">
-                    <img src="assets/images/web-con.webp" class="img-fluid" alt="">
+                    <img src="assets/images/web-con.webp" loading="lazy" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 mobile-right mt-lg-0 mt-5">
                     <div class="row mobile-right-grids mb-lg-5 mb-4">
