--- a/Group10/about.html
+++ b/Group10/about.html
@@ -66,7 +66,7 @@ Author URL: http://w3layouts.com
                 
             </div>
             <div class="col-lg-6">
-                <img src="assets/images/about1.webp" class="img-fluid img-shadow" alt="about">
+                <img src="assets/images/about1.webp" loading="lazy" class="img-fluid img-shadow" alt="about">
             </div>
         </div>
     </div>
@@ -110,7 +110,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="col-lg-4 mobile-left">
-                    <img src="assets/images/mobile.webp" class="img-fluid" alt="">
+                    <img src="assets/images/mobile.webp" loading="lazy" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-4 mobile-right">
                     <div class="row mobile-right-grids mb-lg-5 mb-4">
