--- a/Group10/index.html
+++ b/Group10/index.html
@@ -229,7 +229,7 @@ Author URL: http://w3layouts.com
           <p class="mb-4">By subscribing to our mailing list you will always be updated with the latest news from us.
           </p>
           <form class="newsletter-form">
-            <label for="name"></label>
+            <label for="email"></label>
             <input class="input-rounded" name="email" type="text" required="" placeholder="Enter Email Address">
             <button type="submit" title="Subscribe" class="btn btn-primary btn-style" name="submit" value="Submit">
               Subscribe
