--- a/Group10/index.html
+++ b/Group10/index.html
@@ -230,7 +230,7 @@ Author URL: http://w3layouts.com
           </p>
           <form class="newsletter-form">
             <label for="email"></label>
-            <input class="input-rounded" id="email" type="text" required="" placeholder="Enter Email Address">
+            <input class="input-rounded" type="text" id="email" required="" placeholder="Enter Email Address">
             <button type="submit" title="Subscribe" class="btn btn-primary btn-style" name="submit" value="Submit">
               Subscribe
             </button>
