--- a/Group10/index.html
+++ b/Group10/index.html
@@ -106,7 +106,7 @@ Author URL: http://w3layouts.com
             </div>
         </div>
         <div class="large-12 columns mt-5">
-            <div>
+          <div>
                 <div class="item">
                     <div class="w3l-customers-7">
                         <div class="customers_sur">
@@ -159,6 +159,8 @@ Author URL: http://w3layouts.com
                         </div>
                     </div>
                 </div>
+              </div>
+              </div>
 </section>
 <!--//testimonials section -->
 
